# 2023.1-RelatorioGitPython

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  allcommits.txt  arquivo.md  arquivo_data.md  arquivo_title.md  emailcommits.txt  gitInfo_report.md  index.html  main.py  pyproject.toml  requirements.txt  tempCodeRunnerFile.python
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue-template.md  template-padrão-de-issue.md
.github/workflows/: pylint.yml
DEPLOY/: LICENSE  README.md  setup.py
DEPLOY/pyGitInfo/: __init__.py  pyGitInfo.py
DEPLOY/pyGitInfo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
css/: style.css
docs/: CODE_OF_CONDUCT.md  Ex_issue.txt  architecture_document.md  post_mortem.md  requisitos.md  vision_document.md
geradorrelatorio/: allcommits.txt  average_commit.py  coauthor.py  emailcommits.txt  gitInfo.py  main.py  requirements.txt  verificar_tipo_arquivo.py
gitinfo/: gitInfo.py
gitinfo/testes/: test_dataframe.py
js/: script.js
src/: Gabriel da Silva Rosa  arquivo.md  average_commit.py  coauthor.py  commit_data.py  commit_palavra.py  gerar_reatorio2.py  gerar_relatorio_md.py  gitInfo.py  grafico_issues.py  main.py  relatorio.md  relatorio_geral.md  requirements.txt  test_gitInfo.py  title_commits.py  verificar_tipo_arquivo.py
src/testes/: test_dataframe.py  test_defs_gitInfo.py  test_functions.py  test_gitInfo.py
