[project]
name = "gitInfo"
version = "0.0.1"
description = "Analisador de repositórios do github"
readme = "README.md"
authors = [
  { name =" "Catlen Oliveira", email = "catlen.cleane@hotmail.com" }
  { name = "Felipe Direito", email = "fedireito92@gmail.com" }
  { name = "Gabriel Rosa", email = "gabriel10919@outlook.com" }
  { name = "Gabriel Zaranza", email = "gabrielzaranza@hotmail.com" }
  { name = "Rafael Kenji", email = "rafak.taira@gmail.com" }
  { name = "Lucas Lobão", email = "lucaslobao14df@gmail.com" }
  { name = "Vinícius de Oliveira", email = "viniciusoliveirasp22@gmail.com" }
]

license = { file = "LICENSE" }

classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]
keywords = ["gitInfo", "github", "git", "relatorio", "reports", "gitReports"]
requires-python = ">=3.9"
dependencies = ["requests>=2.28.1", "html2text>=2020.1.16", "beautifulsoup4>=4.11.1"]


[project.scripts]
gitinfo = "gitInfo.__main__:main"
